# DitherBoy

./: CMakeLists.txt  Color.cpp  Image.cpp  ascii_dithrer.cpp  atkinson_dithrer.cpp  floyd_dithrer.cpp  imgui.ini  main.cpp  main_imgui.cpp  ordered_dithrer.cpp  pallete.cpp  test_advanced_ascii.cpp  test_ascii_image.cpp  test_simplified.cpp  threshold_dithrer.cpp
gui/: main.cpp  main_window.cpp  main_window.h
headers/: Image.h  ascii_dithrer.h  atkinson_dithrer.h  color.h  color_converter.h  dithrer.h  error_diffusion_dithrer.h  floyd_dithrer.h  ordered_dithrer.h  pallete.h  threshold_dithrer.h
web_ui/: main_web.cpp
web_ui/static/: app.js  index.html  style.css
